@@ -511,6 +511,7 @@
     "unfilterable",
     "unparse",
     "unpickling",
+    "unrepaired",
     "unretrieved",
     "unversioned",
     "upages",
